# keydr

./: .gitignore  Cargo.toml  NOTICE  THIRD_PARTY_NOTICES.md
assets/dictionaries/: SHA256SUMS  manifest.tsv  words-cs.json.license  words-da.json.license  words-de.json.license  words-en.json.license  words-es.json.license  words-et.json.license  words-fi.json.license  words-fr.json.license  words-hr.json.license  words-hu.json.license  words-it.json.license  words-lt.json.license  words-lv.json.license  words-nb.json.license  words-nl.json.license  words-pl.json.license  words-pt.json.license  words-ro.json.license  words-sl.json.license  words-sv.json.license  words-tr.json.license
assets/themes/: catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  farout.toml  gruvbox-dark.toml  gruvbox-darkest.toml  kanagawa-dragon.toml  kanagawa-lotus.toml  kanagawa-wave.toml  nord.toml  one-dark.toml  solarized-dark.toml  terminal-default.toml  tokyo-night.toml
benches/: ngram_benchmarks.rs
docs/: license-compliance.md
docs/plans/: 2026-02-09-initial-plan.md  2026-02-10-improvement.md  2026-02-14-improvement-2.md  2026-02-15-skill-tree-progression-system.md  2026-02-16-skill-tree-integration-fixes-ui-improvements.md  2026-02-17-code-drill-feature-parity-plan.md  (+15 more)
locales/: cs.yml  da.yml  de.yml  en.yml  es.yml  et.yml  fi.yml  fr.yml  hr.yml  hu.yml  it.yml  lt.yml  lv.yml  nb.yml  nl.yml  pl.yml  pt.yml  ro.yml  sl.yml  sv.yml  tr.yml
scripts/: permalinkify_code_urls.py
src/: app.rs  config.rs  event.rs  i18n.rs  lib.rs  main.rs
tests/: test_profile_fixtures.rs
(+52 files in other folders)
